--- a/model/requirements.txt
+++ b/model/requirements.txt
@@ -1,11 +1,18 @@
+pandas 
+mlflow==1.24.0
+requests==2.27.1
+pylint
+ipython
+databricks-cli
 mlflow
-cffi==1.14.5
 cloudpickle==1.6.0
 databricks-automl-runtime==0.2.5.1
 holidays==0.12
 koalas==1.8.2
-lightgbm==3.3.1
-matplotlib==3.4.2
 psutil==5.8.0
 scikit-learn==0.24.1
 typing-extensions==3.7.4.3
+xgboost==1.5.1
+uvicorn[standard]
+fastapi
+pydantic
